# AgentsTeam

./: .env.example  .gitignore  Quickstart.md  README.md  pyproject.toml
.specify/memory/: constitution.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: agents.js  app.js  history.js  observation.js
specs/003-agent-capability-upgrade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agent-capability-upgrade/checklists/: requirements.md
specs/003-agent-capability-upgrade/contracts/: internal-api.md
src/: config.py  main.py
src/agents/: base.py  registry.py
src/agents/predefined/: __init__.py  ai_citation_strategist.py  ceo.py  content_creator.py  designer.py  douyin_strategist.py  engineer.py  growth_hacker.py  operations.py  product_manager.py  qa_engineer.py  ui_designer.py  xiaohongshu_specialist.py
src/api/: agents.py  goals.py  history.py  observation.py
src/core/: message_bus.py  orchestrator.py  scheduler.py  state_manager.py
src/db/: database.py
src/models/: __init__.py  agent.py  artifact.py  goal.py  message.py  session.py  task.py  team.py
src/providers/: __init__.py  anthropic.py  base.py  local.py  openai_provider.py
src/tools/: __init__.py  ask_agent.py  base.py  create_artifact.py  web_fetch.py  web_search.py
